hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_non_arraykey_keys.php.like_types.exp
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 10-31:
Invalid index type for this darray (Typing[4110])
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 17-20:
Expected arraykey because only array keys can be used to index into a Map, dict, darray, Set, or keyset
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 20-21:
But got Tk
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 10-31:
The keys of this Map are incompatible (Typing[4110])
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 48-49:
Expected Tk
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 20-21:
But got dynamic because it is an unenforceable type
File "disallow_darray_with_non_arraykey_keys.php", line 4, characters 10-31:
The values of this Map are incompatible (Typing[4110])
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 52-53:
Expected Tv
File "disallow_darray_with_non_arraykey_keys.php", line 3, characters 29-30:
But got dynamic because it is an unenforceable type
