hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_non_arraykey_keys.php
<?hh

function f<Tk, Tv>(Tk $key, Tv $value): darray<Tk, Tv> {
  return dict[$key => $value];
}
